# pixelpaint

./: CMakeLists.txt
include/: canva.h  magicnumbers.h  window.h
src/: canva.c  main.c  window.c
